Bootstrap theme: Used CSS selectors to stop whitespace from being removed after lists inside course page HTML.

--- a/theme/bootstrapbase/less/bootstrap/type.less
+++ b/theme/bootstrapbase/less/bootstrap/type.less
@@ -106,10 +106,12 @@ ul, ol {
   padding: 0;
   margin: 0 0 @baseLineHeight / 2 25px;
 }
-ul ul,
-ul ol,
-ol ol,
-ol ul {
+ul > ul,
+ul > ol,
+ol > ol,
+ol > ul,
+li > ol,
+li > ul {
   margin-bottom: 0;
 }
 li {
